# Velo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/scripts/: set-version-from-tag.sh
.github/workflows/: ci.yml  coverage.yml  release.yml
src/: app_state.rs  main.rs
src/fs/: entry.rs  lister.rs  mod.rs  watcher.rs
ui/: app.slint  theme.slint
wix/: main.wxs
